# TextEditorRepository

./: .gitignore  CMakeLists.txt  CommandListExecutor.cpp  Copy.h  DeleteCreator.h  Exceptions.cpp  Exceptions.h  Parser.cpp  Paste.h  PasteCreator.h  StringBuffer.h  main.cpp
Tests/: CommandListExecutorTests.h  CommandParserTests.h  CommandProviderTests.h  CommandsDTOTests.h  CommandsTests.h  Commands_tests.h  CreatorProviderTests.h  CreatorsTests.h  Creators_tests.h  DTOProviderTests.h  InputStreamTests.h  ParserTests.h  Parser_tests.h  StringBuffer_tests.h  StringEditorTests.h  main.cpp
TextEditorLib/: Command.h  CommandCreator.cpp  CommandCreator.h  CommandDTO.cpp  CommandDTO.h  CommandInterface.cpp  CommandInterface.h  CommandListExecutor.cpp  CommandListExecutor.h  CommandParser.cpp  CommandParser.h  CommandProvider.h  CommandProviderFromCreator.cpp  CommandProviderFromCreator.h  Commands.h  CommandsEnum.h  Copy.cpp  Copy.h  CopyCreator.cpp  CopyCreator.h  CopyDTO.cpp  CopyDTO.h  CreatorProvider.h  CreatorProviderFromDTO.cpp  CreatorProviderFromDTO.h  Creators.h  DTO.h  DTOProvider.h  DTOProviderFromParser.cpp  DTOProviderFromParser.h  Delete.cpp  Delete.h  DeleteCreator.cpp  DeleteCreator.h  DeleteDTO.cpp  DeleteDTO.h  EditorBuffer.cpp  EditorBuffer.h  Exceptions.cpp  Exceptions.h  (+32 more)
